fix: missing space on deploy

--- a/static/css/base-page-style.css
+++ b/static/css/base-page-style.css
@@ -955,3 +955,6 @@ body {
     height: 6em;
 }
 
+.break-text {
+    word-break: break-word;
+}
